force-app/main/default/objects/Merchant_Special_Process__c/fields/Referral_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Name__c</fullName>
    <label>Referral Source Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>AVASK</fullName>
            </value>
            <value>
                <fullName>Axe Logistics</fullName>
            </value>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>Lian Lian</fullName>
            </value>
            <value>
                <fullName>Octopia</fullName>
            </value>
            <value>
                <fullName>Cubyn</fullName>
            </value>
            <value>
                <fullName>Payoneer</fullName>
            </value>
            <value>
                <fullName>WorldFirst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>