force-app/main/default/objects/Merchant_Special_Process__c/fields/Referral_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Type__c</fullName>
    <label>Referral Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Fulfilment Partner</fullName>
            </value>
            <value>
                <fullName>Finance Partner</fullName>
            </value>
            <value>
                <fullName>Legal &amp; Tax Partner</fullName>
            </value>
            <value>
                <fullName>E-Commerce Services Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>