force-app/main/default/objects/Merchant_Special_Process__c/fields/Refurbishment_Share_vs_Total__c.field-meta.xml
<CustomField>
    <fullName>Refurbishment_Share_vs_Total__c</fullName>
    <label>Refurbishment Share (vs. Total)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>1-24%</fullName>
            </value>
            <value>
                <fullName>25-49%</fullName>
            </value>
            <value>
                <fullName>50-74%</fullName>
            </value>
            <value>
                <fullName>75-100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>