force-app/main/default/objects/Merchant_Special_Process__c/fields/Repair_Capability__c.field-meta.xml
<CustomField>
    <fullName>Repair_Capability__c</fullName>
    <label>Repair Capability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batteries</fullName>
            </value>
            <value>
                <fullName>Screens</fullName>
            </value>
            <value>
                <fullName>Back</fullName>
            </value>
            <value>
                <fullName>Motherboard</fullName>
            </value>
            <value>
                <fullName>Speakers</fullName>
            </value>
            <value>
                <fullName>Screen polishing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>