force-app/main/default/objects/Merchant_Special_Process__c/fields/Repair_per_day__c.field-meta.xml
<CustomField>
    <fullName>Repair_per_day__c</fullName>
    <label># Repair per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>