force-app/main/default/objects/Merchant_Special_Process__c/fields/Repair_Provider_Countries__c.field-meta.xml
<CustomField>
    <fullName>Repair_Provider_Countries__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>If the merchant manages its product repairs abroad, select the countries in question.</inlineHelpText>
    <label>Repair Provider Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Picklist</valueSetName>
    </valueSet>
</CustomField>