force-app/main/default/objects/Merchant_Special_Process__c/fields/Repair_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Repair_Service_Provider__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>Who is managing merchants repairs (if outsourced)?</inlineHelpText>
    <label>Repair Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEAT</fullName>
            </value>
            <value>
                <fullName>Cordon</fullName>
            </value>
            <value>
                <fullName>Save</fullName>
            </value>
            <value>
                <fullName>WeFix</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>