force-app/main/default/objects/Merchant_Special_Process__c/fields/Return_Label__c.field-meta.xml
<CustomField>
    <fullName>Return_Label__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do your carriers allow you to edit prepaid return labels?</inlineHelpText>
    <label>Return Label</label>
    <type>Checkbox</type>
</CustomField>