force-app/main/default/objects/Merchant_Special_Process__c/fields/RTDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>RTDeveloperName__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RTDeveloperName</label>
    <type>Text</type>
</CustomField>