force-app/main/default/objects/Merchant_Special_Process__c/fields/Sales_Channels__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channels__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>Where does the merchant sell refurbished, second-hand certified or destocked products currently?</inlineHelpText>
    <label>Sales Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>Back Market</fullName>
                <label>Back Market (currently or in the past)</label>
            </value>
            <value>
                <fullName>Marketplaces</fullName>
            </value>
            <value>
                <fullName>Nowhere yet</fullName>
            </value>
            <value>
                <fullName>Physical shop</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>