force-app/main/default/objects/Merchant_Special_Process__c/fields/Shipping_Prices_Cross_Border__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Prices_Cross_Border__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>What are merchants shipping prices for products that have less than 1 kg for cross-border?</inlineHelpText>
    <label>Shipping Prices Cross Border</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7-9</fullName>
            </value>
            <value>
                <fullName>9-11</fullName>
            </value>
            <value>
                <fullName>11-13</fullName>
            </value>
            <value>
                <fullName>13-15</fullName>
            </value>
            <value>
                <fullName>&gt;15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>