force-app/main/default/objects/Merchant_Special_Process__c/fields/Shipping_Prices_Domestic__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Prices_Domestic__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>What are merchants shipping prices for products that have less than 1 kg for domestic flows?</inlineHelpText>
    <label>Shipping Prices Domestic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3-5</fullName>
            </value>
            <value>
                <fullName>5-7</fullName>
            </value>
            <value>
                <fullName>7-9</fullName>
            </value>
            <value>
                <fullName>&gt;9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>