force-app/main/default/objects/Merchant_Special_Process__c/fields/Smartphone_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Smartphone_Turnover__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>Do smartphones account for at least 80% of merchants turnover ?</inlineHelpText>
    <label>Smartphone Turnover &gt; 80%</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>