force-app/main/default/objects/Merchant_Special_Process__c/fields/Smartphone_Weight__c.field-meta.xml
<CustomField>
    <fullName>Smartphone_Weight__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>What is the weight of Smartphones in all merchants Listings?</inlineHelpText>
    <label>Smartphone Weight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heavy</fullName>
            </value>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Mix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>