force-app/main/default/objects/Merchant_Special_Process__c/fields/Sourcing_C2B_Share__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_C2B_Share__c</fullName>
    <inlineHelpText>What share of your supply is sourced from a Buyback Program?</inlineHelpText>
    <label>Sourcing C2B Share</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>1-24%</fullName>
            </value>
            <value>
                <fullName>25-49%</fullName>
            </value>
            <value>
                <fullName>50-74%</fullName>
            </value>
            <value>
                <fullName>75-100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>