force-app/main/default/objects/Merchant_Special_Process__c/fields/Sourcing_Main_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Main_Supplier__c</fullName>
    <label>Sourcing Main Supplier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>