force-app/main/default/objects/Merchant_Special_Process__c/fields/Sourcing_Region__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Region__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>Where are the top smartphone suppliers from?</inlineHelpText>
    <label>Sourcing Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>