force-app/main/default/objects/Merchant_Special_Process__c/fields/State_3__c.field-meta.xml
<CustomField>
    <fullName>State_3__c</fullName>
    <label>Rate 3 (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>