force-app/main/default/objects/Merchant_Special_Process__c/fields/Stocks_Available__c.field-meta.xml
<CustomField>
    <fullName>Stocks_Available__c</fullName>
    <inlineHelpText>How many products do you currently have in stock for e-commerce?</inlineHelpText>
    <label># Stocks available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1-9</fullName>
            </value>
            <value>
                <fullName>10-49</fullName>
            </value>
            <value>
                <fullName>50-99</fullName>
            </value>
            <value>
                <fullName>&gt;100</fullName>
            </value>
            <value>
                <fullName>10-19</fullName>
                <isActive>false</isActive>
                <label>10-19</label>
            </value>
            <value>
                <fullName>100-299</fullName>
                <isActive>false</isActive>
                <label>100-299</label>
            </value>
            <value>
                <fullName>20-29</fullName>
                <isActive>false</isActive>
                <label>20-29</label>
            </value>
            <value>
                <fullName>30-39</fullName>
                <isActive>false</isActive>
                <label>30-39</label>
            </value>
            <value>
                <fullName>300-499</fullName>
                <isActive>false</isActive>
                <label>300-499</label>
            </value>
            <value>
                <fullName>40-49</fullName>
                <isActive>false</isActive>
                <label>40-49</label>
            </value>
            <value>
                <fullName>500-999</fullName>
                <isActive>false</isActive>
                <label>500-999</label>
            </value>
            <value>
                <fullName>&gt;1000</fullName>
                <isActive>false</isActive>
                <label>&gt;1000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>