force-app/main/default/objects/Merchant_Special_Process__c/fields/Story__c.field-meta.xml
<CustomField>
    <fullName>Story__c</fullName>
    <description>For displaying in Approval Page Layout</description>
    <formula>TEXT(Merchant__r.Story__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Story</label>
    <type>Text</type>
</CustomField>