force-app/main/default/objects/Merchant_Special_Process__c/fields/Sub_stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_stage__c</fullName>
    <label>Sub-stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft completion (Merchant Owner)</fullName>
                <label>1. Draft completion (Merchant Owner)</label>
            </value>
            <value>
                <fullName>Draft completion (TL)</fullName>
                <label>2. Draft completion (TL)</label>
            </value>
            <value>
                <fullName>Draft exemption</fullName>
                <label>3. Draft exemption (Optional)</label>
            </value>
            <value>
                <fullName>Draft approval (Finance)</fullName>
                <label>4. Draft approval (Finance)</label>
            </value>
            <value>
                <fullName>Draft approval (Legal)</fullName>
                <label>5. Draft approval (Legal)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>