force-app/main/default/objects/Merchant_Special_Process__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black Sheep Hunt</fullName>
            </value>
            <value>
                <fullName>Battleground</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>