force-app/main/default/objects/Merchant_Special_Process__c/fields/Targeted_Country__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Targeted Country</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Merchant__c</field>
            <operation>equals</operation>
            <valueField>Targeted_Country__c.Merchant__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Targeted_Country__c</referenceTo>
    <relationshipLabel>Merchant Special Processes</relationshipLabel>
    <relationshipName>Merchant_Special_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>