force-app/main/default/objects/Merchant_Special_Process__c/fields/Targeted_Country_Champion__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Country_Champion__c</fullName>
    <formula>Targeted_Country__r.Customer_Champion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Targeted Country Champion</label>
    <type>Text</type>
</CustomField>