force-app/main/default/objects/Merchant_Special_Process__c/fields/Targeted_country_stage__c.field-meta.xml
<CustomField>
    <fullName>Targeted_country_stage__c</fullName>
    <formula>TEXT(Targeted_Country__r.Online_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Targeted country stage</label>
    <type>Text</type>
</CustomField>