force-app/main/default/objects/Merchant_Special_Process__c/fields/TECH_AutoSubmit__c.field-meta.xml
<CustomField>
    <fullName>TECH_AutoSubmit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_AutoSubmit</label>
    <type>Checkbox</type>
</CustomField>