force-app/main/default/objects/Merchant_Special_Process__c/fields/Tech_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Tech_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_Cancelled</label>
    <type>Checkbox</type>
</CustomField>