force-app/main/default/objects/Merchant_Special_Process__c/fields/TECH_loop__c.field-meta.xml
<CustomField>
    <fullName>TECH_loop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH loop</label>
    <type>Checkbox</type>
</CustomField>