force-app/main/default/objects/Merchant_Special_Process__c/fields/TECH_Special_Process_Type_Copy__c.field-meta.xml
<CustomField>
    <fullName>TECH_Special_Process_Type_Copy__c</fullName>
    <label>TECH Special Process Type Copy</label>
    <length>30</length>
    <type>Text</type>
</CustomField>