force-app/main/default/objects/Merchant_Special_Process__c/fields/Technicians__c.field-meta.xml
<CustomField>
    <fullName>Technicians__c</fullName>
    <label># Technicians</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>