force-app/main/default/objects/Merchant_Special_Process__c/fields/Test_OK__c.field-meta.xml
<CustomField>
    <fullName>Test_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test OK</label>
    <type>Checkbox</type>
</CustomField>