force-app/main/default/objects/Merchant_Special_Process__c/fields/Testing_Software__c.field-meta.xml
<CustomField>
    <fullName>Testing_Software__c</fullName>
    <label>Testing Software</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blancco</fullName>
            </value>
            <value>
                <fullName>In-house software</fullName>
            </value>
            <value>
                <fullName>Piceasoft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>