force-app/main/default/objects/Merchant_Special_Process__c/fields/Triggered_by__c.field-meta.xml
<CustomField>
    <fullName>Triggered_by__c</fullName>
    <label>Triggered by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Input</fullName>
            </value>
            <value>
                <fullName>Process: Monitoring Period/Probation period</fullName>
            </value>
            <value>
                <fullName>Process: Launching Phase</fullName>
            </value>
            <value>
                <fullName>Process: Counterfeit</fullName>
            </value>
            <value>
                <fullName>Process: Hazardous Charger</fullName>
            </value>
            <value>
                <fullName>Process: Debt Recovery</fullName>
            </value>
            <value>
                <fullName>Process: Mystery Order</fullName>
            </value>
            <value>
                <fullName>Business: Sales exit launched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>