force-app/main/default/objects/Merchant_Special_Process__c/fields/Type_of_company__c.field-meta.xml
<CustomField>
    <fullName>Type_of_company__c</fullName>
    <inlineHelpText>Which best describes your business activity?</inlineHelpText>
    <label>Type of company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_company_Picklist</valueSetName>
    </valueSet>
</CustomField>