force-app/main/default/objects/Merchant_Special_Process__c/fields/Type_of_Model__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Model__c</fullName>
    <inlineHelpText>Which models would you sell on Back Market? Please only highlight those you restock regularly.</inlineHelpText>
    <label>Type of Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>