force-app/main/default/objects/Merchant_Special_Process__c/fields/Type_of_Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Product_Model__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <label>Type of Product Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>