force-app/main/default/objects/Merchant_Special_Process__c/fields/Type_of_Product_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Product_Repairs__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <inlineHelpText>How does the merchant plan to manage returns for product repairs ?</inlineHelpText>
    <label>Type of Product Repairs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internally</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>