force-app/main/default/objects/Merchant_Special_Process__c/fields/Type_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Products__c</fullName>
    <inlineHelpText>What product categories would you sell on Back Market?</inlineHelpText>
    <label>Type of Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Products_Picklist</valueSetName>
    </valueSet>
</CustomField>