force-app/main/default/objects/Merchant_Special_Process__c/fields/VAT_Scheme_Regular__c.field-meta.xml
<CustomField>
    <fullName>VAT_Scheme_Regular__c</fullName>
    <label>VAT Scheme %Regular</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>