force-app/main/default/objects/Merchant_Special_Process__c/fields/View_details__c.field-meta.xml
<CustomField>
    <fullName>View_details__c</fullName>
    <formula>HYPERLINK ( &quot;/lightning/r/&quot; &amp; Id &amp; &quot;/view&quot;, 
             RecordType.Name &amp; IF (  RecordType.DeveloperName = &apos;NMO_Xborder&apos;,  &apos; for &apos; &amp; TEXT ( Targeted_Country__r.Country__c ), &apos;&apos; ), 
            &quot;_blank&quot; )</formula>
    <label>View details</label>
    <type>Text</type>
</CustomField>