force-app/main/default/objects/Merchant_Special_Process__c/fields/Warehouse_Size__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Size__c</fullName>
    <inlineHelpText>What is the total size of your warehouse/stockage area in m2?</inlineHelpText>
    <label>Warehouse Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1-99</fullName>
            </value>
            <value>
                <fullName>100-499</fullName>
            </value>
            <value>
                <fullName>500-999</fullName>
            </value>
            <value>
                <fullName>&gt; 1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>