force-app/main/default/objects/Merchant_Special_Process__c/fields/Warehouse_visit_planned__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_visit_planned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warehouse visit planned</label>
    <type>Checkbox</type>
</CustomField>