force-app/main/default/objects/Merchant_Special_Process__c/fields/Warranty_Minimum_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Minimum_12_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the merchant offer a minimum 12 month warranty for all products on Back Market?</inlineHelpText>
    <label>Warranty Minimum 12 Months</label>
    <type>Checkbox</type>
</CustomField>