force-app/main/default/objects/Merchant_Special_Process__c/fields/Work_in_English__c.field-meta.xml
<CustomField>
    <fullName>Work_in_English__c</fullName>
    <businessOwnerUser>arthur.veron@backmarket.com</businessOwnerUser>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Could the merchant work only in English with us?</inlineHelpText>
    <label>Work in English</label>
    <type>Checkbox</type>
</CustomField>