force-app/main/default/objects/Merchant_Special_Process__c/recordTypes/Back_Camp_U_S.recordType-meta.xml
<RecordType>
    <fullName>Back_Camp_U_S</fullName>
    <active>false</active>
    <label>Back Camp US</label>
</RecordType>