force-app/main/default/objects/Merchant_Special_Process__c/recordTypes/Debit_Note.recordType-meta.xml
<RecordType>
    <fullName>Debit_Note</fullName>
    <active>false</active>
    <label>Negative Balance</label>
</RecordType>