force-app/main/default/objects/Merchant_Special_Process__c/recordTypes/Debit_Note_buyback.recordType-meta.xml
<RecordType>
    <fullName>Debit_Note_buyback</fullName>
    <active>false</active>
    <label>Negative Balance buyback</label>
</RecordType>