force-app/main/default/objects/Merchant_Special_Process__c/recordTypes/Debit_Note_U_S.recordType-meta.xml
<RecordType>
    <fullName>Debit_Note_U_S</fullName>
    <active>false</active>
    <label>Negative Balance US</label>
</RecordType>