force-app/main/default/objects/Merchant_Special_Process__c/recordTypes/Exit.recordType-meta.xml
<RecordType>
    <fullName>Exit</fullName>
    <active>true</active>
    <label>Exit</label>
</RecordType>