force-app/main/default/objects/Merchant_Special_Process__c/recordTypes/Exit_buyback.recordType-meta.xml
<RecordType>
    <fullName>Exit_buyback</fullName>
    <active>true</active>
    <label>Exit buyback</label>
</RecordType>