force-app/main/default/objects/Merchant_Special_Process__c/recordTypes/Exit_U_S.recordType-meta.xml
<RecordType>
    <fullName>Exit_U_S</fullName>
    <active>true</active>
    <label>Exit US</label>
</RecordType>