force-app/main/default/objects/Merchant_Special_Process__c/recordTypes/Follow_Up.recordType-meta.xml
<RecordType>
    <fullName>Follow_Up</fullName>
    <active>false</active>
    <label>Follow-Up</label>
</RecordType>