force-app/main/default/objects/Merchant_Special_Process__c/recordTypes/Follow_Up_buyback.recordType-meta.xml
<RecordType>
    <fullName>Follow_Up_buyback</fullName>
    <active>false</active>
    <label>Follow-Up buyback</label>
</RecordType>