force-app/main/default/objects/Merchant_Special_Process__c/recordTypes/Follow_Up_U_S.recordType-meta.xml
<RecordType>
    <fullName>Follow_Up_U_S</fullName>
    <active>false</active>
    <label>Follow-Up US</label>
</RecordType>