force-app/main/default/objects/Merchant_Special_Process__c/recordTypes/NB_Lead_Qualification.recordType-meta.xml
<RecordType>
    <fullName>NB_Lead_Qualification</fullName>
    <active>true</active>
    <label>Lead and Seller Qualification</label>
</RecordType>