force-app/main/default/objects/Merchant_Special_Process__c/recordTypes/NMO_Xborder.recordType-meta.xml
<RecordType>
    <fullName>NMO_Xborder</fullName>
    <active>false</active>
    <label>N.M.O. Xborder</label>
</RecordType>