force-app/main/default/objects/Merchant_Special_Process__c/recordTypes/NMO_Xborder_buyback.recordType-meta.xml
<RecordType>
    <fullName>NMO_Xborder_buyback</fullName>
    <active>false</active>
    <label>N.M.O. Xborder buyback</label>
</RecordType>