force-app/main/default/objects/Merchant_Special_Process__c/recordTypes/NMO_Xborder_U_S.recordType-meta.xml
<RecordType>
    <fullName>NMO_Xborder_U_S</fullName>
    <active>false</active>
    <label>N.M.O. Xborder US</label>
</RecordType>